Added the user_devices register API